# maplelink

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-uf2.yml
python/: README.md
python/maplelink/: __init__.py  client.py
src/: app_router.c  app_router.h  app_transport.h  emmc_dat0_rx.pio  fw_version.h  http_custom_files.c  lwipopts.h  main.c  net_config.c  net_config.h  proto_emmc.c  proto_emmc.h  proto_i2c.c  proto_i2c.h  proto_spi.c  proto_spi.h  proto_uart.c  proto_uart.h  serial_app.c  serial_app.h  spi_sniff_byte_rx.pio  tusb_config.h  usb_descriptors.c  web_server.c  web_server.h  xterm_assets.c  xterm_assets.h
src/web/: index.html
tools/: embed_html.py  gen_build_info.py
